--- a/src/com/vanomaly/superd/view/MainWindow.fxml
+++ b/src/com/vanomaly/superd/view/MainWindow.fxml
@@ -26,26 +26,26 @@
         </TableView>
       </children>
     </AnchorPane>
-    <BorderPane id="" maxHeight="100.0" maxWidth="1000.0" prefHeight="100.0" prefWidth="1000.0">
+    <BorderPane id="" minHeight="90.0" maxHeight="90.0" maxWidth="1000.0" prefHeight="90.0" prefWidth="1000.0">
       <center>
         <HBox>
           <children>
-            <AnchorPane prefHeight="100.0" prefWidth="765.0">
+            <AnchorPane prefHeight="250.0" prefWidth="765.0">
               <children>
                 <Label fx:id="targetLabel" layoutX="26.0" layoutY="16.0" styleClass="contrast-label" text="Target(s) :" />
                 <Label fx:id="delimiterLabel" layoutX="26.0" layoutY="60.0" styleClass="contrast-label" text="Delimiter :" />
                 <TextField fx:id="delimiterText" layoutX="92.0" layoutY="56.0" prefWidth="33.0" />
                 <TextField fx:id="targetText" layoutY="11.0" promptText="Click the Add button to get started..." AnchorPane.leftAnchor="92.0" AnchorPane.rightAnchor="4.0" />
                 <Slider fx:id="hashSlider" layoutX="142.0" layoutY="36.0" majorTickUnit="50.0" max="150.0" minorTickCount="0" orientation="VERTICAL" prefHeight="55.0" showTickMarks="true" snapToTicks="true" />
-                <TextField fx:id="hashMethodDescText" editable="false" layoutX="173.0" layoutY="56.0" prefWidth="588.0" promptText="Hash Method Description" />
+                <TextField fx:id="hashMethodDescText" editable="false" layoutX="173.0" layoutY="56.0" prefWidth="588.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="4.0" promptText="Hash Method Description" />
                 <Label id="hashMethodLabel" layoutX="174.0" layoutY="36.0" styleClass="contrast-label" text="Hash Method :" />
                 <Label id="hashAlgo" fx:id="hashMethodLabel" layoutX="261.0" layoutY="36.0" styleClass="contrast-label" text="SHA-256" />
               </children>
             </AnchorPane>
-            <AnchorPane prefHeight="100.0">
+            <AnchorPane prefHeight="250.0">
               <children>
                 <Button id="addButtonId" fx:id="addButton" layoutY="10.0" maxHeight="24.0" maxWidth="110.0" minHeight="24.0" minWidth="110.0" mnemonicParsing="false" onAction="#handleAddButtonAction" prefHeight="24.0" prefWidth="110.0" styleClass="ActionButtonDefault" text="Add" />
-                <Button id="actionButtonId" fx:id="actionButton" layoutX="114.0" layoutY="10.0" maxHeight="80.0" maxWidth="120.0" minHeight="80.0" minWidth="120.0" mnemonicParsing="false" onAction="#handleActionButtonAction" prefHeight="80.0" prefWidth="120.0" text="Dedupe!" />
+                <Button id="actionButtonId" fx:id="actionButton" layoutX="114.0" layoutY="10.0" maxHeight="70.0" maxWidth="120.0" minHeight="70.0" minWidth="120.0" mnemonicParsing="false" onAction="#handleActionButtonAction" prefHeight="80.0" prefWidth="120.0" text="Dedupe!" />
               </children>
             </AnchorPane>
           </children>
