added file scanning ability, updates table during runtime

--- a/src/com/vanomaly/superd/view/application.css
+++ b/src/com/vanomaly/superd/view/application.css
@@ -23,6 +23,10 @@ button.actionButtonStop {
     -fx-focus-color: #969A9F;
 }
 
-.table-cell {
-    -fx-alignment: CENTER;
+#sizeCol .table-cell {
+    -fx-alignment: baseline-right;
 }
+
+/*.table-cell {
+    -fx-alignment: CENTER;
+}*/
