--- a/src/com/vanomaly/superd/view/MainWindow.fxml
+++ b/src/com/vanomaly/superd/view/MainWindow.fxml
@@ -18,7 +18,7 @@
           <columns>
             <TableColumn minWidth="200.0" prefWidth="450.0" text="File" fx:id="fileCol" />
             <TableColumn minWidth="200.0" prefWidth="450.0" text="Hash" fx:id="hashCol" />
-            <TableColumn minWidth="100.0" maxWidth="350.0" text="Size" fx:id="sizeCol" />
+            <TableColumn id="sizeCol" minWidth="75.0" maxWidth="250.0" text="Size" fx:id="sizeCol" />
           </columns>
           <placeholder>
             <Label />
